various clean up
- adding tests
- simplified CoverageSliceCatalog
- initial work on AdditionalDomains

--- a/modules/unsupported/coverage-experiment/coverage-api/pom.xml
+++ b/modules/unsupported/coverage-experiment/coverage-api/pom.xml
@@ -82,6 +82,12 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.geotools</groupId>
+      <artifactId>gt-sample-data</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>    
+    <dependency>
       <!-- for FilenameUtils -->
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
