--- a/modules/plugin/imagemosaic/pom.xml
+++ b/modules/plugin/imagemosaic/pom.xml
@@ -108,6 +108,11 @@
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
+          <dependency>
+            <artifactId>ojdbc14</artifactId>
+            <groupId>com.oracle</groupId>
+            <!-- version specified in root pom -->
+          </dependency>
     <dependency>
       <groupId>com.vividsolutions</groupId>
       <artifactId>jts</artifactId>
