--- a/modules/plugin/imagemosaic/pom.xml
+++ b/modules/plugin/imagemosaic/pom.xml
@@ -154,6 +154,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.geotools</groupId>
+      <artifactId>gt-transform</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>it.geosolutions.imageio-ext</groupId>
       <artifactId>imageio-ext-streams</artifactId>
     </dependency>
@@ -166,7 +171,6 @@
       <groupId>org.geotools</groupId>
       <artifactId>gt-cql</artifactId>
       <version>${project.version}</version>
-      <scope>test</scope>
     </dependency>        
     <dependency>
       <groupId>commons-beanutils</groupId>
