[MD]-Adding imageMosaic Oracle test

--- a/modules/plugin/imagemosaic/pom.xml
+++ b/modules/plugin/imagemosaic/pom.xml
@@ -111,6 +111,7 @@
           <dependency>
             <artifactId>ojdbc14</artifactId>
             <groupId>com.oracle</groupId>
+            <scope>provided</scope>
             <!-- version specified in root pom -->
           </dependency>
     <dependency>
